# windows-dependencies

./: .gitignore  DALi-Windows-MSVC-Build-Run-Guide-kr.md  DALi-Windows-MSVC-Build-Run-Guide.md  README.md  build_dali_adaptor.ps1  build_dali_core.ps1  build_dali_samples.ps1  build_dali_ui.ps1  build_windows_dependencies.ps1  prebuild.bat  prebuild.sh  project.config  run_dali_sample.ps1  setenv.bat  setenv.sh
ExInclude/: AdaptorPreDefine.h  CustomFile.h  DaliDemoPreDefine.h  FMemOpen.h  InternalFileOperation.h  PreprocessorDefinitions.h  ToolKitPreDefine.h  Win32WindowSystem.h  WindowsEventSystem.h  iosfwd  png.h  pngconf.h  pthread.h  signal.h
ExInclude/cairo/: cairo-features.h  cairo.h
ExInclude/curl/: curl.h  easy.h
ExInclude/freetype/: freetype.h  ftglyph.h  ftoutln.h  ftstroke.h
ExInclude/harfbuzz/: hb-buffer.h  hb-common.h  hb-font.h  hb-ft.h  hb-shape.h
ExInclude/openssl/: crypto.h
ExInclude/sys/: mman.h  prctl.h  time.h
ExLib/: libEGL.lib  libGLESv2.lib
ExLib/Debug/: FontConfig.lib  Win32File.lib  WindowsPlatform.lib  dlfcn.lib  freetype.lib  fribidi.lib  getopt.lib  giflib.lib  libexif.lib  libjpeg.lib  libpng.lib  pixman.lib  pthread.lib  turboJpeg.lib
ExLib/Release/: Win32File.lib  WindowsPlatform.lib  dlfcn.lib
SampleSolution/: CMakeLists.txt
Solution/: dali.sln  dali_for_debug.sln
Solution/dali-adaptor/: dali-adaptor.vcxproj  dali-adaptor.vcxproj.filters
Solution/dali-core/: dali-core.vcxproj  dali-core.vcxproj.filters
Solution/dali-csharp-binder/: dali-csharp-binder.vcxproj  dali-csharp-binder.vcxproj.filters
Solution/dali-demo/: dali-demo.vcxproj  dali-demo.vcxproj.filters  main-example.cpp
Solution/dali-toolkit/: dali-toolkit.vcxproj  dali-toolkit.vcxproj.filters
Solution/vc2017/: DALi-VCPKG.sln  DALi.sln  install-headers.bat  install.bat
include/: dali-windows-dependencies.h
include/dali/: extern-definitions.h  preprocessor-definitions.h
resources/: fonts.conf  set-dali-runtime-env.ps1
src/: extern-definitions.cpp
thirdPart/dlfcn/: dlfcn.cpp  (+2 more)
vcpkg-script/: Readme.md  [VCPKG-angle]_0001_Apply_Fix_glInvalidateFramebuffer_crash.patch  [VCPKG-angle]_0001_Apply_Fix_windows_build_error_cannot_find_definition_far.patch  [VCPKG-angle]_0002_Fix_angle_header_files.patch  [VCPKG-angle]_0003_Apply_Fix_glInvalidateFramebuffer_crash.patch  [VCPKG-angle]_0004_Fix_Not_trivially_structible_atomic_is_OK.patch  [VCPKG-angle]_0004_Fix_static_assert.patch  [VCPKG-fontconfig]_0001_Apply_Source_compile_fix.patch  [VCPKG-getopt]_0001_Apply_Fix_extern_c.patch  [VCPKG-gettext]_0001_Install_msgfmt_tool.patch  [VCPKG-libjpeg-turbo]_0001_Apply_Fix_fill_jpeg_buffer_cb.patch  [VCPKG-pthreads]_0001_Apply_Fix_define_timespec.patch  [VCPKG]_0001_Fix_proxy_access.patch  [VCPKG]_0002_Fix_Windows_toolchain_bigobj.patch  [VCPKG]_0002_VS2022_and_modern_downloads.patch  [VCPKG]_0003_Use_system_curl_on_windows.patch  [VCPKG]_0004_Fix_x64_meson_cross_file.patch  [VCPKG]_0005_Use_x64_python_tool.patch  [VCPKG]_0006_Use_x64_meson_native_build.patch  build-deps.sh  dali-build-common.ps1  dependency-network.ps1  setup-dali-dependencies.ps1  setup-tizenvg.ps1  setup-vcpkg-vs2022.ps1
(+139 files in other folders)
